--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,13 @@ jobs:
 
       - name: Deploy Code
         run: |
-          ssh -o StrictHostKeyChecking=no blog-ssh@68.183.179.31 << 'EOF'
-          cd /home/techland360-blog/htdocs/blog.techland360.com/
+          ssh pranto-ssh@68.183.179.31 << 'EOF'
+          cd /home/pranto/htdocs/pranto.techland360.com/
           php artisan down
           git fetch --all
           git reset --hard origin/main
           git pull origin main
-          composer install --no-interaction --prefer-dist --optimize-autoloader
+          composer install
           npm install
           npm run build
           php artisan key:generate
@@ -38,4 +38,3 @@ jobs:
           php artisan view:clear
           php artisan up
           EOF
-        shell: bash
